<resources>
    <string name="app_name">Parstagram</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >=8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="home">Home</string>
    <string name="new_post">New Post</string>
    <string name="user">User</string>
    <string name="instagram_logo">Instagram logo</string>
    <string name="logo">Logo</string>
    <string name="caption">Caption</string>
    <string name="picture_taken">Picture Taken</string>
    <string name="cancel">Cancel</string>
    <string name="photo">Photo</string>
    <string name="post">Post</string>
    <string name="empty_description">Empty description</string>
    <string name="no_photo">No picture attached to post</string>
    <string name="post_failed">Post Failed</string>
    <string name="tap_to_open_camera">Tap to Open Camera</string>
    <string name="post_to_parse_failed">Could not post to Parse</string>
    <string name="username">username</string>
    <string name="profile_picture">profile picture</string>
    <string name="like_post">like post</string>
    <string name="query_failure">Could not query posts from Parse Server</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="prompt_username">Username</string>
    <string name="sign_up_failed">Sign Up Failed</string>
    <string name="invalid_email">Invalid email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="some_time_ago">some time ago</string>
    <string name="no_creation_time_provided">No creation time provided</string>
    <string name="no_description_provided">No description provided</string>
    <string name="no_photo_url_provied">No photo provided</string>
    <string name="user_corrupted">User Data Corrupted</string>
    <string name="invalid_name">Name cannot be null</string>
</resources>