<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_recents"
        android:enabled="true"
        android:icon="@drawable/instagram_home_filled_24"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/instagram_new_post_outline"
        android:title="@string/new_post"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_nearby"
        android:enabled="true"
        android:icon="@drawable/instagram_user_filled_24"
        android:title="@string/user"
        app:showAsAction="ifRoom" />
</menu>