<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/new_post"
        android:src="@drawable/camera_shadow_fill"
        android:text="@string/cancel"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/image_view_ig_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/image_view_ig_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="138dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/cancel"
        android:contentDescription="@string/instagram_logo"
        android:gravity="center_horizontal"
        android:src="@drawable/instagram_logo"
        android:text="@string/photo"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view_picture"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@id/image_view_ig_logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="2dp"
        android:background="@color/white"
        android:contentDescription="@string/picture_taken"
        android:padding="1dp"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_view_picture"
        app:counterEnabled="true"
        app:counterMaxLength="2200"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:background="@color/white"
            android:hint="@string/caption"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_caption"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="151dp"
        android:text="@string/post">

    </Button>

    <Button
        android:id="@+id/button_open_camera"
        android:layout_width="219dp"
        android:layout_height="66dp"
        android:layout_alignTop="@+id/image_view_picture"
        android:layout_alignBottom="@+id/image_view_picture"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="169dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="165dp"
        android:gravity="center"
        android:text="@string/tap_to_open_camera" />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:gravity="center"
        android:visibility="gone" />
</RelativeLayout>