<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="10dp">

    <ImageView
        android:id="@+id/image_view_profile_picture"
        android:layout_width="35dp"
        android:layout_height="28dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/profile_picture"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/text_view_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/image_view_post"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="15dp"
        android:layout_toEndOf="@+id/image_view_profile_picture"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image_view_post"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/image_view_profile_picture"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/post"
        app:srcCompat="@color/BlueViolet" />

    <LinearLayout
        android:id="@+id/linear_layout_post_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_view_post"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view_like_post"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/like_post"
            android:src="@drawable/ufi_heart" />
    </LinearLayout>

    <ru.embersoft.expandabletextview.ExpandableTextView
        android:id="@+id/expandable_text_view_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_post_actions"
        app:etv_animationTime="20"
        app:etv_expandLines="2"
        app:etv_showLine="false"
        app:etv_textContentColor="#040404"
        app:etv_textContentSize="14sp"
        android:layout_marginBottom="10dp"
        app:etv_textExpand="more..."
        app:etv_textShrink="less..." />

    <TextView
        android:id="@+id/text_view_creation_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/expandable_text_view_description"
        android:layout_marginBottom="10dp"
        >

    </TextView>
</RelativeLayout>